@@ -279,6 +279,7 @@ Schueler, Betty J.
 
 Edwards, Eric
 SURVICE Engineering, Inc.
+Open Source (Doc Camp)
 
 Kregel, Dwayne
 SURVICE Engineering, Inc.
@@ -333,6 +334,25 @@ Open Source (GCI)
 Perez, Alex
 2012 November
 Open Source (GCI)
+
+Singh, Harmanpreet
+nicknames harmanpreet
+2013 October
+Open Source (Doc Camp)
+
+Kamga, Isaac
+nicknames Izak, iiizzzaaakkk
+2013 October
+Open Source (Doc Camp)
+
+Check, Nyah
+nicknames Ch3ck
+2013 October
+Open Source (Doc Camp)
+
+Scott Nesbitt
+2013 October
+Open Source (Doc Camp)
 
 Wood, David
 2013 November
