@@ -246,8 +246,6 @@ include/raytrace.h librt
 	RT_FREE_TREE -> BU_PUT [deprecation 7.22]
 include/bu.h
 	bu_parse_mm() [deprecated 7.22]
-librtserver
-	becoming stand-alone project, removes optional java dependency [deprecated 7.22]
 mged
 	em, e_muves, l_muves, lm, read_muves, and t_muves MUVES-specific commands [deprecated 7.22]
 
